--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
     <parent>
         <groupId>edu.utexas.tacc.tapis</groupId>
-        <artifactId>tapis-bom</artifactId>
-        <version>2.0.4</version>
+        <artifactId>tapis-meta-bom</artifactId>
+        <version>1.0.0</version>
         <!-- Set empty relative path to avoid maven warning and-->
         <!--   ensure parent is found in local repository if that-->
         <!--   is the only place it exists.-->
@@ -32,11 +32,6 @@
         <!-- Source encoding -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <!-- Most properties set in parent tapis-bom   -->
-        <!-- Properties can be overridden here         -->
-        <!-- Version of tapis-shared-java to be used.  --> 
-        <!-- Individual projects may want to override. -->
-        <!--<tapis-client-java.version>2.0.28</tapis-client-java.version>-->
     </properties>
 
     <dependencies>
