needed to change parent pom version to snapshot style in api and lib pom

--- a/tapis-meta-shared-api/pom.xml
+++ b/tapis-meta-shared-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>edu.utexas.tacc.tapis</groupId>
 		<artifactId>tapis-meta-shared</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>tapis-meta-shared-api</artifactId>
