--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>edu.utexas.tacc.tapis</groupId>
         <artifactId>tapis-meta-bom</artifactId>
-        <version>1.0.0</version>
+        <version>[1.0,2.0)</version>
         <!-- Set empty relative path to avoid maven warning and-->
         <!--   ensure parent is found in local repository if that-->
         <!--   is the only place it exists.-->
